implemented thread class

--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="src\TCP_Listner\TCPListner.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="thread.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
