--- a/Server/Server.vcxproj.filters
+++ b/Server/Server.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClInclude Include="src\TCP_Listner\TCPListner.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="thread.h">
+    <ClInclude Include="src\Thread\thread.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
